--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.17",
+    "@popperjs/core": "^2.10.2",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "graphql": "^16.0.1",
     "next": "latest",
+    "popper.js": "^1.16.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
